--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,8 +65,8 @@ include = [
 ]
 
 [tool.ruff]
-target-version = "py311"
 line-length = 100
+target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
@@ -130,5 +130,14 @@ module = ["loguru.*"]
 ignore_missing_imports = true
 
 [dependency-groups]
-test = ["pytest>=8.0.0", "pytest-cov>=6.0.0", "pytest-mock>=3.14.0"]
-dev = ["mypy>=1.19.0", "ruff>=0.9.0", "pre-commit>=4.0.0"]
+test = [
+    "pytest>=8.0.0",
+    "pytest-cov>=6.0.0",
+    "pytest-mock>=3.14.0"
+]
+dev = [
+    "mypy>=1.19.0",
+    "ruff>=0.14.8",
+    "pre-commit>=4.5.0",
+    "rust-just>=1.45.0"
+]
