--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "loguru>=0.7.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
+    "utm>=0.8.1",
 ]
 
 [project.scripts]
@@ -131,9 +132,11 @@ ignore_missing_imports = true
 
 [dependency-groups]
 test = [
+    "carla>=0.9.16",
     "pytest>=8.0.0",
     "pytest-cov>=6.0.0",
-    "pytest-mock>=3.14.0"
+    "pytest-mock>=3.14.0",
+    "utm>=0.8.1",
 ]
 dev = [
     "mypy>=1.19.0",
