--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,3 +49,10 @@ repos:
     hooks:
       - id: actionlint-docker
         files: '^(\.github/workflows/.*\.ya?ml|action\.ya?ml)$'
+
+  - repo: https://github.com/zizmorcore/zizmor-pre-commit
+    rev: v1.18.0
+    hooks:
+      - id: zizmor
+        args: [--fix, --pedantic]
+        files: '^(\.github/workflows/.*\.ya?ml|action\.ya?ml)$'
